--- a/webfolder/core/templates/base.html
+++ b/webfolder/core/templates/base.html
@@ -25,13 +25,13 @@
 <div class="ui purple tiered menu">
     <div class="menu">
         <a class="active item">
-            <i class="time icon"></i> TimeLine
+            <i class="time icon"></i>Files
         </a>
         <a class="item">
-            <i class="cloud upload icon"></i> My Shares
+            <i class="cloud upload icon"></i>My Shares
         </a>
         <a class="item">
-            <i class="cloud download icon"></i> Friends' Shares
+            <i class="cloud download icon"></i>Friends
         </a>
 
         <div class="right menu">
@@ -44,7 +44,7 @@
 
             <!--ADD NEW...-->
             <div class="ui tiny dropdown item">
-                <div class="ui purple button"><i class="add sign icon"></i>Add New...</div>
+                <div class="ui purple button"><i class="add sign icon"></i>New</div>
 
                 <div class="menu">
                     <a class="item"><i class="comment outline icon"></i>Note</a>
@@ -55,7 +55,7 @@
 
             <!--USER ACTIONS-->
             <div class="ui dropdown item">
-                <i class="user icon"></i> John Doe <i class="icon dropdown"></i>
+                <i class="user icon"></i><i class="icon dropdown"></i>
 
                 <div class="menu">
                     <a class="item"><i class="setting icon"></i>My Account</a>
