--- a/webfolder/webfolder/static/css/base.css
+++ b/webfolder/webfolder/static/css/base.css
@@ -2,14 +2,19 @@
 html,
 body {
   font-size: 15px;
-  padding: 20px;
+  padding: 40px;
   height: 100%;
 }
 body {
   font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
-  background: #FCFCFC url(../images/bg.jpg) repeat;
+  background: #FCFCFC url(../images/bg.png) repeat;
   margin: 0px;
   padding: 0px;
   color: #555555;
   min-width: 320px;
+}
+
+a {
+  color: #D95C5C;
+  text-decoration: none;
 }
