--- a/webfolder/webfolder/templates/webfolder/includes/top_menu.html
+++ b/webfolder/webfolder/templates/webfolder/includes/top_menu.html
@@ -1,28 +1,5 @@
-﻿{% load staticfiles %}
 
-        
-<!DOCTYPE html>
-<head>
-    <!-- Standard Meta -->
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-    <!-- Site Properities -->
-    <title>WebFolder</title>
-
-    <!--Semantic UI-->
-    <link rel="stylesheet" type="text/css" href="{% static 'vendor/semantic/css/semantic.css' %}">
-    <script src="{% static 'javascript/jquery-2.0.3.min.js' %}"></script>
-    <script src="{% static 'vendor/semantic/javascript/semantic.js' %}"></script>
-
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-    <script src="{% static 'javascript/base.js' %}"></script>
-</head>
-<html>
-<body id="feed">
-
-<div class="ui purple tiered menu">
+<div class="ui tiered menu">
     <div class="menu">
         <a class="active item">
             <i class="time icon"></i>Files
@@ -44,7 +21,7 @@
 
             <!--ADD NEW...-->
             <div class="ui tiny dropdown item">
-                <div class="ui purple button"><i class="add sign icon"></i>New</div>
+                <div class="ui black button"><i class="add sign icon"></i>New</div>
 
                 <div class="menu">
                     <a class="item"><i class="comment outline icon"></i>Note</a>
@@ -72,7 +49,3 @@
         <a class="item"><i class="attachment icon"></i> Files </a>
     </div>
 </div>
-
-</body>
-
-</html>
