--- a/webfolder/webfolder/templates/webfolder/base.html
+++ b/webfolder/webfolder/templates/webfolder/base.html
@@ -30,7 +30,7 @@
 
     <div class="event">
         <div class="label">
-            <i class="circular attachment icon"></i>
+            <a href="#"> <i class="circular attachment icon"></i></a>
 
         </div>
         <div class="content">
@@ -74,7 +74,7 @@
     </div>
     <div class="event">
         <div class="label">
-            <i class="circular comment outline icon"></i>
+            <a href="#"><i class="circular comment outline icon"></i></a>
         </div>
         <div class="content">
             <div class="date">
@@ -90,7 +90,7 @@
     </div>
     <div class="event">
         <div class="label">
-            <i class="circular globe icon"></i>
+            <a href="#"><i class="circular globe icon"></i></a>
         </div>
         <div class="content">
             <div class="date">
@@ -107,6 +107,17 @@
             </div>
         </div>
     </div>
+    <!-- PAGINATION -->
+    <center>
+        <div class="ui labeled icon button">
+            <i class="left arrow icon"></i>
+            Previous
+        </div>
+        <div class="ui right labeled icon button">
+            <i class="right arrow icon"></i>
+            Next
+        </div>
+    </center>
 </div>
 
 </body>
