--- a/webfolder/webfolder/templates/webfolder/includes/top_menu.html
+++ b/webfolder/webfolder/templates/webfolder/includes/top_menu.html
@@ -21,7 +21,7 @@
 
             <!--ADD NEW...-->
             <div class="ui tiny dropdown item">
-                <div class="ui black button"><i class="add sign icon"></i>New</div>
+                <div class="ui black icon button"><i class="add sign icon"></i>New</div>
 
                 <div class="menu">
                     <a class="item"><i class="comment outline icon"></i>Note</a>
