--- a/webfolder/webfolder/templates/webfolder/files.html
+++ b/webfolder/webfolder/templates/webfolder/files.html
@@ -1,27 +1,10 @@
-﻿{% load staticfiles %}
+{% extends "webfolder/_base.html" %}
 
+{% block title %}
+My Files {{ block.super }}
+{% endblock %}
 
-<!DOCTYPE html>
-<head>
-    <!-- Standard Meta -->
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-    <!-- Site Properities -->
-    <title>WebFolder</title>
-
-    <!--Semantic UI-->
-    <link rel="stylesheet" type="text/css" href="{% static 'vendor/semantic/css/semantic.css' %}">
-    <script src="{% static 'javascript/jquery-2.0.3.min.js' %}"></script>
-    <script src="{% static 'vendor/semantic/javascript/semantic.js' %}"></script>
-
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
-    <script src="{% static 'javascript/base.js' %}"></script>
-</head>
-<html>
-<body id="feed">
-{% include "webfolder/includes/top_menu.html" %}
+{% block content %}
 
 <div class="ui stacked feed segment">
     <h3 class="ui dividing header">
@@ -120,6 +103,4 @@
     </center>
 </div>
 
-</body>
-
-</html>
+{% endblock %}
