--- a/webfolder/webfolder/templates/webfolder/files.html
+++ b/webfolder/webfolder/templates/webfolder/files.html
@@ -13,7 +13,7 @@ My Files {{ block.super }}
 
     <div class="event">
         <div class="label">
-            <a href="#"> <i class="circular attachment icon"></i></a>
+            <a href="{% url "files-detail" 1 %}"> <i class="circular attachment icon"></i></a>
 
         </div>
         <div class="content">
@@ -57,7 +57,7 @@ My Files {{ block.super }}
     </div>
     <div class="event">
         <div class="label">
-            <a href="#"><i class="circular comment outline icon"></i></a>
+            <a href="{% url "files-detail" 1 %}"><i class="circular comment outline icon"></i></a>
         </div>
         <div class="content">
             <div class="date">
@@ -73,7 +73,7 @@ My Files {{ block.super }}
     </div>
     <div class="event">
         <div class="label">
-            <a href="#"><i class="circular globe icon"></i></a>
+            <a href="{% url "files-detail" 1 %}"><i class="circular globe icon"></i></a>
         </div>
         <div class="content">
             <div class="date">
