Added Public status.

--- a/webfolder/webfolder/templates/webfolder/files.html
+++ b/webfolder/webfolder/templates/webfolder/files.html
@@ -21,6 +21,7 @@ My Files {{ block.super }}
                 Just moments ago
             </div>
             <div class="summary">
+                <i class="circular inverted green unlock icon"></i>
                 <a>You</a> added 3 attachements
             </div>
 
@@ -64,7 +65,7 @@ My Files {{ block.super }}
                 3 days ago
             </div>
             <div class="summary">
-                You added a note
+                <a>You</a> added a note
             </div>
             <div class="extra text">
                 I am a dog and I do not know how to make a post
