--- a/webfolder/webfolder/templates/webfolder/files_detail.html
+++ b/webfolder/webfolder/templates/webfolder/files_detail.html
@@ -25,6 +25,7 @@ My Files {{ block.super }}
                     3 days ago
                 </div>
                 <div class="summary">
+                    <i class="circular inverted green unlock icon"></i>
                     <a>You</a> added <a>2 links</a>
                 </div>
                 <div class="extra text">
@@ -37,7 +38,11 @@ My Files {{ block.super }}
         </div>
         <!-- ACTIONS -->
         <center>
-            <div class="ui labeled primary icon button">
+            <div class="ui labeled positive icon button">
+                <i class="lock icon"></i>
+                UnShare
+            </div> 
+            <div class="ui labeled negative icon button">
                 <i class="remove circle icon"></i>
                 Delete
             </div>
