--- a/webfolder/webfolder/templates/webfolder/friends.html
+++ b/webfolder/webfolder/templates/webfolder/friends.html
@@ -7,8 +7,28 @@ Friends' Shares {{ block.super }}
 {% block content %}
 <div class="ui stacked feed segment">
     <h3 class="ui dividing header">
-        Shared by Friends
+        Friends' Shares
     </h3>
+
+    <div class="event">
+        <div class="label">
+            <i class="circular comment outline icon"></i>
+        </div>
+        <div class="content">
+            <div class="date">
+                3 days ago
+            </div>
+            <div class="summary">
+                <i class="circular inverted green unlock icon"></i>
+                <a>Jack</a> added a note
+            </div>
+            <div class="extra text">
+                I am a dog and I do not know how to make a post
+            </div>
+        </div>
+    </div>
+
+
 
 </div>
 {% endblock %}
