--- a/webfolder/webfolder/templates/webfolder/files.html
+++ b/webfolder/webfolder/templates/webfolder/files.html
@@ -8,7 +8,7 @@ My Files {{ block.super }}
 
 <div class="ui stacked feed segment">
     <h3 class="ui dividing header">
-        My Files
+        Activity
     </h3>
 
     <div class="event">
