--- a/webfolder/webfolder/templates/webfolder/includes/top_menu.html
+++ b/webfolder/webfolder/templates/webfolder/includes/top_menu.html
@@ -3,7 +3,7 @@
 <div class="ui tiered menu">
     <div class="menu">
         <a class="{% ancestor 'files' %} item" href="{% url "files" %}">
-            <i class="time icon"></i>Files
+            <i class="time icon"></i>Activity
         </a>
         <a class="{% ancestor 'shares' %} item" href="{% url "shares" %}">
             <i class="cloud upload icon"></i>My Shares
