Wireframe for New section.

--- a/webfolder/webfolder/templates/webfolder/includes/menu_top.html
+++ b/webfolder/webfolder/templates/webfolder/includes/menu_top.html
@@ -20,27 +20,10 @@
                 </div>
             </div>
 
-            <!--ADD NEW...-->
-            <div class="ui tiny dropdown item">
-                <div class="ui black icon button"><i class="add sign icon"></i>New</div>
+            {% include "webfolder/includes/menu_top_new.html" %}
 
-                <div class="menu">
-                    <a class="item"><i class="comment outline icon"></i>Note</a>
-                    <a class="item"><i class="globe icon"></i>Link</a>
-                    <a class="item"><i class="attachment icon"></i>File</a>
-                </div>
-            </div>
+            {% include "webfolder/includes/menu_top_account.html" %}
 
-            <!--USER ACTIONS-->
-            <div class="ui dropdown item">
-                <i class="user icon"></i><i class="icon dropdown"></i>
-
-                <div class="menu">
-                    <a class="item"><i class="setting icon"></i>My Account</a>
-                    <a class="item"><i class="settings icon"></i>Administration</a>
-                    <a class="item"><i class="sign out icon"></i>Logout</a>
-                </div>
-            </div>
         </div>
     </div>
     <div class="ui sub menu">
