--- a/webfolder/webfolder/templates/webfolder/files_detail.html
+++ b/webfolder/webfolder/templates/webfolder/files_detail.html
@@ -18,7 +18,7 @@ My Files {{ block.super }}
 
         <div class="event">
             <div class="label">
-                <a href="#"><i class="circular globe icon"></i></a>
+                <i class="circular globe icon"></i>
             </div>
             <div class="content">
                 <div class="date">
@@ -26,7 +26,7 @@ My Files {{ block.super }}
                 </div>
                 <div class="summary">
                     <i class="circular inverted green unlock icon"></i>
-                    <a>You</a> added <a>2 links</a>
+                    <a>You</a> added 2 links
                 </div>
                 <div class="extra text">
                     <div class="ui horizontal list">
