Updated Semantic UI.

--- a/webfolder/webfolder/templates/webfolder/_base.html
+++ b/webfolder/webfolder/templates/webfolder/_base.html
@@ -8,14 +8,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-    <!-- Site Properities -->
+    <!-- Ttile -->
     <title>{% block title %}- WebFolder{% endblock %}</title>
 
     <!--Semantic UI-->
-    <link rel="stylesheet" type="text/css" href="{% static 'vendor/semantic/css/semantic.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'vendor/semantic/css/semantic.min.css' %}">
     <script src="{% static 'javascript/jquery-2.0.3.min.js' %}"></script>
-    <script src="{% static 'vendor/semantic/javascript/semantic.js' %}"></script>
+    <script src="{% static 'vendor/semantic/javascript/semantic.min.js' %}"></script>
 
+    <!-- Site Properities -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     <script src="{% static 'javascript/base.js' %}"></script>
 </head>
