--- a/webfolder/webfolder/templates/webfolder/_base.html
+++ b/webfolder/webfolder/templates/webfolder/_base.html
@@ -21,7 +21,7 @@
     <script src="{% static 'javascript/base.js' %}"></script>
 </head>
 <html>
-<body>
+<body {% block body_attrs %}{% endblock %}>
 
     {% include "webfolder/includes/menu_top.html" %}
 
