--- a/webfolder/webfolder/templates/webfolder/includes/menu_top_account.html
+++ b/webfolder/webfolder/templates/webfolder/includes/menu_top_account.html
@@ -2,9 +2,9 @@
 <div class="ui dropdown item">
     <i class="user icon"></i><i class="icon dropdown"></i>
     <div class="menu">
-        <a class="item"><i class="setting icon"></i>My Account</a>
-        <a class="item"><i class="settings icon"></i>Administration</a>
-        <a class="item"><i class="sign out icon"></i>Logout</a>
+        <a class="item" href="{% url "account-detail" 1 %}"><i class="setting icon"></i>My Account</a>
+        <a class="item" href="{% url "admin:index" %}"><i class="settings icon"></i>Administration</a>
+        <a class="item" href="{% url "account-logout" %}"><i class="sign out icon"></i>Logout</a>
     </div>
 </div>
 
