--- a/webfolder/webfolder/templates/webfolder/login.html
+++ b/webfolder/webfolder/templates/webfolder/login.html
@@ -38,7 +38,7 @@ Login {{ block.super }}
         <div class="ui error message">
             <div class="header">We noticed some issues</div>
         </div>
-        <div class="ui blue submit button">Login</div>
+        <a class="ui blue submit button" href="{% url 'files' %}">Login</a>
     </div>
 </div>
 
