--- a/deploy/ansible/roles/web-app/templates/start_gunicorn.sh.j2
+++ b/deploy/ansible/roles/web-app/templates/start_gunicorn.sh.j2
@@ -8,10 +8,10 @@ USER=root
 GROUP=root
 PORT=8060
 IP=0.0.0.0
-SITE=/opt/aert/webfolder/env
+SITE={{ app_env }}
 cd $SITE
 source ./bin/activate
-export AERT_WEBFOLDER_CONFIG=/opt/aert/webfolder/etc/config_vagrant.ini
+export AERT_WEBFOLDER_CONFIG={{ app_home}}/config.ini
 test -d $LOGDIR || mkdir -p $LOGDIR
 exec ./bin/gunicorn -b $IP:$PORT -w $NUM_WORKERS \
   --user=$USER --group=$GROUP --log-level=debug --log-file=$LOGFILE \
