--- a/webfolder/webfolder/templates/webfolder/includes/menu_top_account.html
+++ b/webfolder/webfolder/templates/webfolder/includes/menu_top_account.html
@@ -3,7 +3,8 @@
     <i class="user icon"></i><i class="icon dropdown"></i>
     <div class="menu">
         <a class="item" href="{% url "account-detail" 1 %}"><i class="setting icon"></i>My Account</a>
-        <a class="item" href="{% url "admin:index" %}"><i class="settings icon"></i>Administration</a>
+        <a class="item"><i class="settings icon"></i>Administration</a>
+        <!--<a class="item" href="{% url "admin:index" %}"><i class="settings icon"></i>Administration</a>-->
         <a class="item" href="{% url "account-logout" %}"><i class="sign out icon"></i>Logout</a>
     </div>
 </div>
