--- a/webfolder/webfolder/templates/webfolder/files_detail.html
+++ b/webfolder/webfolder/templates/webfolder/files_detail.html
@@ -38,19 +38,19 @@ My Files {{ block.super }}
         </div>
         <!-- ACTIONS -->
         <center>
-            <div class="ui labeled positive icon button">
-                <i class="lock icon"></i>
-                UnShare
-            </div> 
-            <a class="ui labeled negative icon button delete_button">
-                <i class="trash icon"></i>
-                Delete
-            </a>
             <a href="{% url "files" %}">
                 <div class="ui button">
                     Cancel
                 </div>
             </a>
+            <a class="ui labeled negative icon button delete_button">
+                <i class="trash icon"></i>
+                Delete
+            </a>
+            <div class="ui labeled blue icon button">
+                <i class="lock icon"></i>
+                UnShare
+            </div> 
         </center>
     </div>
 </div>
@@ -64,12 +64,12 @@ My Files {{ block.super }}
     <p>Do you want to delete this item ?</p>
   </div>
   <div class="actions">
+      <div class="ui button">
+          Cancel
+      </div>
       <div class="ui labeled primary icon button">
           <i class="trash icon"></i>
           Delete
-      </div>
-      <div class="ui button">
-          Cancel
       </div>
   </div>
 </div>
