--- a/deploy/ansible/roles/app/templates/site_webfolder.app.j2
+++ b/deploy/ansible/roles/app/templates/site_webfolder.app.j2
@@ -1,7 +1,7 @@
 
 server {
   listen 80;
-  server_name example.org;
+  server_name 127.0.0.1;
   access_log  /var/log/nginx/example.log;
 
     location / {
