--- a/webfolder/webfolder/templates/webfolder/files.html
+++ b/webfolder/webfolder/templates/webfolder/files.html
@@ -11,6 +11,8 @@ My Files {{ block.super }}
         Activity
     </h3>
 
+    {% include "webfolder/includes/menu_new.html" %}
+
     <div class="event">
         <div class="label">
             <i class="circular attachment icon"></i>
