--- a/webfolder/webfolder/templates/webfolder/files_detail.html
+++ b/webfolder/webfolder/templates/webfolder/files_detail.html
@@ -11,7 +11,9 @@ My Files {{ block.super }}
         My Files
     </h3>
 
-    <div class="ui stacked feed segment">
+    {% include "webfolder/includes/menu_new.html" %}
+
+    <div class="ui basic feed segment">
         <h4 class="ui dividing header">
             3 days ago
         </h4>
